# reinforcement-learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
dqn/: __main__.py  algorithm.py  context.py  networks.py  replay.py  run_dqn.py
muzero/: __main__.py  context.py  game.py  networks.py  replay.py  run_muzero.py  threads.py  tree_search.py  wrappers.py
ppo/: __main__.py  actor_critic.py  algorithm.py  atari_wrapper.py  buffer.py  context.py  main.py  ppo_agent.py  requirements.txt  runner.py  utils.py
scripts/: CheckMetrics.ipynb  DrawPlotsForReport.ipynb  GenerateHeatmaps.ipynb  RandomAgent.ipynb  TestEnvironment.ipynb  TestMCTSInMuZero.ipynb  run_policy.py
scripts/data/: muzero.csv  muzero_loss.csv  muzero_reanalyse.csv  muzero_reward_actor_0.csv  ppo_loss.csv  ppo_results.csv  random_agent_results.csv
src/: simulator.py  wrappers.py
src/networks/: dqn.py
src/policies/: common.py  dql_policy.py  random_policy.py
