[project]
name = "src"
version = "0.0.1"
description = "Reinforcement Learning project"
dependencies = [
    "ale-py==0.10.1",
    "ipykernel==6.29.5",
    "matplotlib==3.9.2",
    "pandas==2.2.2",
    "gymnasium[atari]==1.0.0",
]
[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
